k8s/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-flask-app-service
  namespace: app-ns
spec:
  selector:
    app: qr-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
